progress on experiments

--- a/1_introduction.tex
+++ b/1_introduction.tex
@@ -1,10 +1,11 @@
-The term \textit{traffic assignment} (or route choice, or route assignment) captures a large array of problems concerning the distribution of traffic over a network. Traffic assignment problems arise in transportation planning applications, such as in the traditional ``four-step'' procedure, where it occupies the final step, following trip generation, trip distribution, and mode choice \cite{mcnally2007four}.  The fundamental principle that guides most traffic assignment models is Wardrop's principle \cite{wardrop1952some}, which states that amongst the available alternatives, drivers will select routes that minimize their travel times. Because the speed of traffic tends to decrease as the number of vehicles on the route increases, Wardrop's principle leads to an iterated game in which drivers test new routes, day after day, until they converge to a Nash equilibrium, a.k.a. a \textit{user equilibrium}. The term is also used for problems that involve a single decision maker, who prescribes the routes for users in order to optimize some system-level performance metric, e.g. total travel time, emissions, energy consumption. These are mathematical programs, and their solutions are known as \textit{system optimal} assignments. We will focus in this paper on user equilibrium traffic assignments.
+\todo[inline]{I don't think the terms traffic assignment and route choice are used interchangeably}
+The term \textit{traffic assignment} (or route choice, or route assignment) captures a large array of problems concerning the distribution of traffic over a network. Traffic assignment problems arise in transportation planning applications, such as in the traditional ``four-step'' procedure, where it occupies the final step, following trip generation, trip distribution, and mode choice \cite{mcnally2007four}.  The fundamental principle that guides most traffic assignment models is Wardrop's principle \cite{wardrop1952some}, which states that amongst the available alternatives, drivers will select routes that minimize their travel times. Because the speed of traffic tends to decrease as the number of vehicles on the route increases, Wardrop's principle leads to an iterated game in which drivers test new routes, day after day, until they converge to a Nash equilibrium, a.k.a. a \textit{user equilibrium}. The term is also used for problems that involve a single decision maker, who prescribes the routes for users in order to optimize some system-level performance metric, e.g. total travel time, emissions, energy consumption. These are mathematical programs, and their solutions are known as \textit{system optimal} assignments. We will focus in this paper on user equilibrium traffic assignments. \todo[inline]{might be nice to specify Wardrop's 1st and 2nd principles}
 
-Since the pioneering work of Wardrop, the mathematical and numerical study of traffic assignment has progressed at a moderate pace. This is perhaps mostly due to a historical scarcity of traffic data and network information, but also because of the difficulty of the problem. [CCC] gives several examples in which problems could not be solved for networks of useful size. It is not surprising therefore that the problem has received renewed interest with recent increases in traffic and network data, and computational power. Also driving this renewal are concerns about the `unintended consequences' of the widespread use of routing apps \cite{traffic_apps}, as well as advances in autonomous driving technologies.
+Since the pioneering work of Wardrop, the mathematical and numerical study of traffic assignment has progressed at a moderate pace. \todo[inline]{"moderate pace" seems weird. like as opposed to fast? what is fast? what is slow?} This is perhaps mostly due to a historical scarcity of traffic data and network information, but also because of the difficulty of the problem. [CCC] gives several examples in which problems could not be solved for networks of useful size. It is not surprising therefore that the problem has received renewed interest with recent increases in traffic and network data, and computational power. Also driving this renewal are concerns about the `unintended consequences' of the widespread use of routing apps \cite{traffic_apps}, as well as advances in autonomous driving technologies.
 
-An investigation into the techniques of traffic assignment reveals a multitude of models, numerical methods, and performance metrics. As is usually the case, the more detailed the model, the more expensive the computation. However it is not clear under which circumstances the additional effort (or investment in computational resources) is necessary. For example, although it is usually agreed that dynamical models that capture the essential phenomenon of congestion are desirable, it is also true that the computation (as well as network configuration effort) involved in solving dynamic traffic assignment (DTA) problems can be large. On the other hand, existing static planning methods cannot fully model traffic congestion because of their inability to represent queue formation and dissipation when traffic demand exceeds road capacities\cite{nie2010solving}. 
+An investigation into the techniques of traffic assignment reveals a multitude of models, numerical methods, and performance metrics. \todo[inline]{when we say "models" we are referring to models of traffic flow dynamics - is it clear to just say "models"?} As is usually the case, the more detailed the model, the more expensive the computation. However it is not clear under which circumstances the additional effort (or investment in computational resources) is necessary. For example, although it is usually agreed that dynamical models that capture the essential phenomenon of congestion are desirable, it is also true that the computation (as well as network configuration effort) involved in solving dynamic traffic assignment (DTA) problems can be large. On the other hand, existing static planning methods cannot fully model traffic congestion because of their inability to represent queue formation and dissipation when traffic demand exceeds road capacities\cite{nie2010solving}. 
 
-This paper presents a software framework for addressing such questions. The software is based on the formulation of traffic assignment as a \textit{variational inequality}, introduced by Nagurney \cite{nagurney2013network}. This is a very general formulation, as it requires only continuity (\XXX TRUE?) of the traffic model. Hence, it covers a wide range of models: static and dynamic, macroscopic and microscopic, 'analytical' and 'simulation-based', etc. The software is modular and extensible, in the sense that it provides interfaces for incorporating new models, cost functions, and numerical solvers. 
+This paper presents a software framework for addressing such questions. The software is based on the formulation of traffic assignment as a \textit{variational inequality}, introduced by Nagurney \cite{nagurney2013network}. This is a very general formulation, as it requires only continuity (\XXX TRUE?) of the traffic model. Hence, it covers a wide range of models: static and dynamic, macroscopic and microscopic, `analytical' and `simulation-based', etc. The software is modular and extensible, in the sense that it provides interfaces for incorporating new models, cost functions, and numerical solvers. 
 
 There are many other programs, both commercial and shared, that solve dynamic traffic assignment problems. 
 
