--- a/main.tex
+++ b/main.tex
@@ -1,10 +1,10 @@
 \documentclass[conference]{IEEEtran}
-
+\usepackage{todonotes}
 \input{_defines}
 
 \begin{document}
 
-\title{A software framework for solving dynamic traffic assignment\\
+\title{A unified software framework for solving traffic assignment\\
 %{\footnotesize \textsuperscript}
 \thanks{This work is supported in part by the Office of Science of the
  U.S.~Department of Energy under contract No.~DE-AC02-05CH11231.}
@@ -74,7 +74,6 @@ bayen@berkeley.edu}
 \section{Experiments}
 \label{sec:experiments}
 \input{6_experiments}
-
 
 \section{Conclusions}
 \label{sec:conclusions}
